site link transition fix on mobile

--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -75,11 +75,15 @@
         width: rem(30);
         &:hover {
           transition: transform 300ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
-          transform: translateY(-8px);
+          transform: translateX(5px);
         }
         @include breakpoint(medium) {
           height: rem(40);
           width: rem(40);
+          &:hover {
+            transition: transform 300ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+            transform: translateY(-8px);
+          }
         }
         @include breakpoint(large) {
           height: rem(44);
